--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
         Apply online for Housing
       </h1>
-      <p>Enter each child staying with you occasionally.</p>
+      <p class="govuk-body-l">Enter each child staying with you occasionally.</p>
       <h2 class="govuk-heading-m">
           Child 1:
       </h2>
