--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -36,7 +36,7 @@
 
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>only provisional content - will need to be reviewed with Sharon and Housing</p>
+    <p>only provisional content - will need to be reviewed with Sharon and Housing - <br><strong>could we have a pdf or something the user can print of download?</strong></p>
 </div>
 
 {% endblock %}
