--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -13,13 +13,13 @@
         </h1>
 
         <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset" aria-describedby="diff-hint">
+            <fieldset class="govuk-fieldset" aria-describedby="reason-hint">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h1 class="govuk-fieldset__heading">
                     Why are you applying for housing?
                 </h1>
                 </legend>
-                <span id="diff-hint" class="govuk-hint govuk-!-margin-bottom-8">
+                <span id="reason-hint" class="govuk-hint govuk-!-margin-bottom-8">
                 Select all that apply.
                 </span>
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -29,26 +29,26 @@
                     </legend>
                 <div class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="leave-1" name="leave" type="checkbox" value="leave1">
-                        <label class="govuk-label govuk-checkboxes__label" for="leave-1">
+                        <input class="govuk-checkboxes__input" id="reason-1" name="reason" type="checkbox" value="reason1">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-1">
                         Homeless or threatened with homelessness
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="leave-2" name="leave" type="checkbox" value="leave2">
-                        <label class="govuk-label govuk-checkboxes__label" for="leave-2">
+                        <input class="govuk-checkboxes__input" id="reason-2" name="reason" type="checkbox" value="reason2">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-2">
                         Leaving prison
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="leave-3" name="leave" type="checkbox" value="leave3">
-                        <label class="govuk-label govuk-checkboxes__label" for="leave-3">
+                        <input class="govuk-checkboxes__input" id="reason-3" name="reason" type="checkbox" value="reason3">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-3">
                         Leaving hospital
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="leave-4" name="leave" type="checkbox" value="leave4">
-                        <label class="govuk-label govuk-checkboxes__label" for="leave-4">
+                        <input class="govuk-checkboxes__input" id="reason-4" name="reason" type="checkbox" value="reason4">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-4">
                         Leaving HM Armed Forces
                         </label>
                     </div>
@@ -61,20 +61,20 @@
                     </legend>
           
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-1" name="diff" type="checkbox" value="relation">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-1">
+                        <input class="govuk-checkboxes__input" id="reason-5" name="reason" type="checkbox" value="reason5">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-1">
                                 Relationship problems
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                        <input class="govuk-checkboxes__input" id="reason-6" name="reason" type="checkbox" value="reason6">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-6">
                                 Domestic abuse
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                        <input class="govuk-checkboxes__input" id="reason-7" name="reason" type="checkbox" value="reason7">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-7">
                                 Harassment or violence in my area
                         </label>
                     </div>
@@ -87,14 +87,14 @@
                 </legend>
            
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-4" name="diff" type="checkbox" value="mortage">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-4">
+                        <input class="govuk-checkboxes__input" id="reason-8" name="reason" type="checkbox" value="reason8">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-8">
                                 Home being repossessed as can’t pay mortgage
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-5" name="diff" type="checkbox" value="rent">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-5">
+                        <input class="govuk-checkboxes__input" id="reason-9" name="reason" type="checkbox" value="reason9">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-9">
                                 Can’t afford to pay rent
                         </label>
                     </div>
@@ -107,32 +107,32 @@
                     </legend>
            
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-1" name="diff" type="checkbox" value="relation">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-1">
+                        <input class="govuk-checkboxes__input" id="reason-10" name="reason" type="checkbox" value="reason10">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-10">
                                 Home declared Below Tolerable Standard or has a closing order
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                        <input class="govuk-checkboxes__input" id="reason-11" name="reason" type="checkbox" value="reason11">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-11">
                                 Medical condition made worse by my current housing
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                        <input class="govuk-checkboxes__input" id="reason-12" name="reason" type="checkbox" value="reason12">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-12">
                                 Problems getting around my home due to disability
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                        <input class="govuk-checkboxes__input" id="reason-13" name="reason" type="checkbox" value="reason13">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-13">
                                 Home is overcrowded
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                        <input class="govuk-checkboxes__input" id="reason-14" name="reason" type="checkbox" value="reason14">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-14">
                                 Home is too big for me
                         </label>
                     </div>
@@ -145,14 +145,14 @@
                         </h2>
                     </legend>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-4" name="diff" type="checkbox" value="mortage">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-4">
+                        <input class="govuk-checkboxes__input" id="reason-15" name="reason" type="checkbox" value="reason15">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-15">
                                 To be nearer family
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="diff-5" name="diff" type="checkbox" value="rent">
-                        <label class="govuk-label govuk-checkboxes__label" for="diff-5">
+                        <input class="govuk-checkboxes__input" id="reason-16" name="reason" type="checkbox" value="reason16">
+                        <label class="govuk-label govuk-checkboxes__label" for="reason-16">
                                 Social or cultural reasons
                         </label>
                     </div>
