--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -12,19 +12,165 @@
             Apply online for Housing
         </h1>
 
-        <p>Area choice <strong class="govuk-tag red">coming soon</strong></p>
+        <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset" aria-describedby="area-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h2 class="govuk-fieldset__heading">
+                    Which areas do you want to live in?
+                </h2>
+                </legend>
+                <span id="area-hint" class="govuk-hint govuk-!-margin-bottom-8">
+                Select all that apply.
+                </span>
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading">
+                            Barrhead South
+                    </h2>
+                    </legend>
+                <div class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-1" name="area" type="checkbox" value="area1">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-1">
+                                Upper Auchenback
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-2" name="area" type="checkbox" value="area2">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-2">
+                                Central Auchenback
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-3" name="area" type="checkbox" value="area3">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-3">
+                                Lower Auchenback
+                        </label>
+                    </div>
+             
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                            Barrhead West
+                    </h2>
+                    </legend>
+          
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-5" name="area" type="checkbox" value="area5">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-1">
+                                Gateside
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-6" name="area" type="checkbox" value="area6">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-6">
+                                Bellfield
+                        </label>
+                    </div>
+
+              
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                            Barrhead Central
+                    </h2>
+                </legend>
+                <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-7" name="area" type="checkbox" value="area7">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-7">
+                                Tait
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-8" name="area" type="checkbox" value="area8">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-8">
+                                Levern
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-9" name="area" type="checkbox" value="area9">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-9">
+                                Craigheads
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-4" name="area" type="checkbox" value="area4">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-4">
+                                Centre
+                        </label>
+                    </div>
+               
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                            Barrhead North
+                    </h2>
+                    </legend>
+           
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-10" name="area" type="checkbox" value="area10">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-10">
+                                Waulkmill
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-11" name="area" type="checkbox" value="area11">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-11">
+                                Crossmill
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-12" name="area" type="checkbox" value="area12">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-12">
+                                Cowan Park
+                        </label>
+                    </div>
+
+                
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                        <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                                Eastwood
+                        </h2>
+                    </legend>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-13" name="area" type="checkbox" value="area13">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-13">
+                                Thornliebank
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-14" name="area" type="checkbox" value="area14">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-14">
+                                Newton Mearns
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-15" name="area" type="checkbox" value="area15">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-15">
+                                Eaglesham
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-16" name="area" type="checkbox" value="area16">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-16">
+                                Busby and Netherlee
+                        </label>
+                    </div>
+                </div>
+
+            </fieldset>
+        </div>
+
+        
         {{ govukButton({
-          text: "Continue",
-          classes: "button-primary",
-          href: "/forms/housing/CBLmonitor.html"
-        }) }}
+            text: "Continue",
+            classes: "button-primary",
+            href: "/forms/housing/CBLmonitor.html"
+          }) }}
       
 
     </div>
 </div>
 
-<div class="UR-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-</div>
+
 
 {% endblock %}
