--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -26,8 +26,28 @@
         <p>You can contact my doctor, hospital consultant, health visitor or social worker, the police or any other relevant person if you need more information for my housing application, in line with General Data Protection Regulations.</p>
 
         <p><a href="#">Housing Services Privacy Notice for GDPR.</a></p>
-        <p>need a checkbox here</p>
-        <p>Read statement and confirm you understand and agree.</p>
+
+        {% from "checkboxes/macro.njk" import govukCheckboxes %}
+
+            {{ govukCheckboxes({
+            idPrefix: "declaration2",
+            name: "declaration2",
+            fieldset: {
+                legend: {
+                text: "",
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--s"
+                }
+            },
+            items: [
+                {
+                value: "has-read",
+                text: "Read statement and confirm you understand and agree."
+                }
+            ]
+            }) }}
+
+
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
@@ -40,7 +60,7 @@
 
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>not finished: need a checkbox, the link to the privacy policy, and the content will have to be reviewed - this is too much for now </p>
+    <p>need the link to the privacy policy, and the content will have to be reviewed - this is too much for now </p>
 </div>
 
 {% endblock %}
