improve presentation of main pages

--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -9,16 +9,16 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Forms
       </h1>
-      <p>
-        This is where we can have a list of forms we are working on. We can have different versions to show and to use for usability testing.
+      <p class="govuk-body-l">
+        This is where we have the forms we are working on. We can have different versions to show and to use for usability testing.
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start.html">P1 enrolment</a> - version with modification and feedback following UR testing on the 28/11 <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html"> simplified CBL</a> still working on it <strong class="govuk-tag info">last update:</strong><strong> 29/11 evening</strong></li>
+        <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27"> simplified CBL</a><br> 5 years of addresses still to be done<br><strong class="govuk-tag info">last update:</strong><strong> 29/11 evening</strong></li>
         <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li-->
       </ul>
 
