--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,14 +8,14 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
         Homepage
       </h1>
       <p>
-        We can create forms, patterns and show our work. <br>By clicking on the ERC logo on any page, you will get back to this homepage.
+        We can create forms, patterns and show our work. <br><span style="color:#b10e1e ">By clicking/tapping on the ERC logo on any page</span>, you will get back to this homepage.
       </p>
-
+    
       <h2 class="govuk-heading-m">From here you can access:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="components/menu-components.html">a list components</a></li>
