--- a/app/views/support.html
+++ b/app/views/support.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
         Supporting documents
       </h1>
