--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -17,8 +17,8 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27"> simplified CBL</a><br> 5 years of addresses still to be done<br><strong class="govuk-tag info">last update:</strong><strong> 29/11 evening</strong></li>
+        <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold"> Simplified CBL</a><br> 5 years of addresses still to be done<br><strong class="govuk-tag info">last update:</strong><strong> 29/11 evening</strong></li>
         <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li-->
       </ul>
 
