email mandatory so validation and error message plus remove some notes

--- a/app/views/forms/education/declaration1-error.html
+++ b/app/views/forms/education/declaration1-error.html
@@ -34,7 +34,7 @@ Error -  Declaration
             items: [
               {
                 value: "dec1",
-                text: "I’ve read and understood ERC’s admission policy"
+                text: "I’ve read and understood the council’s admission policy"
               },
               {
                 value: "dec2",
