--- a/app/views/forms/education/declaration1.html
+++ b/app/views/forms/education/declaration1.html
@@ -31,7 +31,7 @@
             items: [
               {
                 value: "dec1",
-                text: "I’ve read and understood ERC’s admission policy"
+                text: "I’ve read and understood the council’s admission policy"
               },
               {
                 value: "dec2",
@@ -59,7 +59,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>Good to go - no one had a problem with it - Sharon to confirm use of ERC</li> 
+        <li>Good to go - no one had a problem with it</li> 
     </ul>
 </div>
 <div class="UR-notes-box">
