--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -136,7 +136,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>No previous page, guidance at the top with a link to a reduced policy document - <strong>We want it to open in a new tab to avoid losing progress</strong> - just the part for alternative school choice - link will be provided by Heather - to be approved by Education</li> 
+        <li>No previous page, guidance at the top with a link to a reduced policy document - <strong>We want it to open in a new tab to avoid losing progress</strong> - just the part for alternative school choice - link will be provided + to be approved by Education</li> 
         <li>None option to go at the top </li>
     </ul>
 </div>
