--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -70,7 +70,7 @@
         </form>
         <div class="design-notes-box">
             <h3 class="govuk-heading-s">Design notes:</h3>
-            <p><strong>New guidance needed - Sharon to provide it</strong></p>
+            <p><strong>New guidance needed</strong></p>
             <p>Term "they" might be confusing for parents who have more than one kid at school, as they won't be able to enter more than one stage in the list</p>
             <p></p>
         </div>
